#5583 fix about window on small screens & make it draggable

--- a/web/client/themes/default/less/panels.less
+++ b/web/client/themes/default/less/panels.less
@@ -211,6 +211,12 @@
     left: 20%;
 }
 
+
+#mapstore-about .modal-body {
+    max-height: calc(100vh - 100px);
+    overflow-y: auto;
+}
+
 #share-panel-dialog-modal {
     position: absolute;
     margin-top: 0;
